# photo-decomp

./: .gitignore  Dockerfile  index.html
test/: CMakeLists.txt
test/Profiles/: test.F90
test/data/: .grid.photo.simple.csv.swp  cross_section.BrO.config.json  cross_section.acetone.config.json  cross_section.base.1.nc  cross_section.base.2.nc  cross_section.base.config.json  cross_section.ccl4.config.json  cross_section.cfc-11.config.json  cross_section.ch2o.config.json  cross_section.ch2o.nc  cross_section.ch3ono2_ch3o_no2.config.json  cross_section.ch3ono2_ch3o_no2.nc  cross_section.chbr3.config.json  cross_section.chcl3.config.json  cross_section.n2o5-no2_no3.config.json  cross_section.n2o5.nc  cross_section.nitroxy_acetone.config.json  cross_section.o3_tint.config.json  grid.190-210.config.json  grid.300-375.config.json  grid.photo.190-210.csv  grid.simple.config.json  photorates.test.config.json  photorates.tst.config.json  profile.acetone.config.json  temp.cdf
test/grids/: grid.F90  test.F90
test/oldtuv/: setaer.f
test/oldtuv/Profile/: air.from_csv_file.type.F90  earth_sun_distance.type.F90  from_config.type.F90  from_csv_file.type.F90  o3.from_csv_file.type.F90  srfAlbedo_from_config.type.F90  sza_from_time.type.F90
test/oldtuv/radXfer_cross_section/: base.cross_section.type.F90  o2.cross_section.type.F90  o3.tint.cross_section.type.F90  tint.cross_section.type.F90
test/oldtuv/radiator/: aerosol.radiator.type.F90  base.radiator.type.F90
test/oldtuv/util/: la_srb.type.F90
test/radXfer/: radXfer_core.F90
test/radiator/: radiator_core.F90
(+190 files in other folders)
